<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mario.musicapp.PlaylistsActivity"
    android:id="@+id/mainLinearLayout"
    style="@style/main_linear_layout">

    <LinearLayout
        style="@style/tabs_linear_layout"
        android:background="@color/p_color">
        <TextView
            android:id="@+id/songsTab"
            style="@style/tabs_layout"
            android:text="@string/n1_tab"/>
        <TextView
            android:id="@+id/albumsTab"
            style="@style/tabs_layout"
            android:text="@string/n2_tab"/>
        <TextView
            android:id="@+id/playListsTab"
            style="@style/opened_tab_layout"
            android:text="@string/n3_tab"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp">
        <View
            style="@style/lineView">
        </View>
        <View
            style="@style/lineView">
        </View>
        <View
            style="@style/lineView">
        </View>
    </LinearLayout>

    <LinearLayout
        style="@style/mid_layout"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            style="@style/not_found"/>
    </LinearLayout>

    <LinearLayout
        style="@style/musicButton_linear_layout">
        <ImageView
            style="@style/musicButton_layout"
            android:src="@drawable/previous"/>
        <ImageView
            style="@style/musicButton_layout"
            android:src="@drawable/play"/>
        <ImageView
            style="@style/musicButton_layout"
            android:src="@drawable/next"/>
    </LinearLayout>
</LinearLayout>
